theme.css
/* ... */
body.theme-setting-embeddedNoteTitleVisibilityShow .embed-title {
  display: flex;
}
@media (hover: hover) {
  body.theme-setting-embeddedNoteTitleVisibilityHover
    .internal-embed:has(.embed-title:not(:empty)) {
    padding-top: 1.5rem;
  }
  body.theme-setting-embeddedNoteTitleVisibilityHover
    .internal-embed:has(.embed-title:not(:empty)):hover
    .embed-title {
    display: flex;
    position: absolute;
    top: 0.5rem;
    left: 1rem;
  }
}
.markdown-embed .markdown-embed-content {
  height: fit-content;
  max-height: var(--embed-max-height);
  overflow: auto;
}
.markdown-source-view.mod-cm6
  .cm-content
  > .markdown-embed[contenteditable="false"]:has(.markdown-embed-link) {
  contain: layout !important;
}
.markdown-embed-link {
  position: absolute;
  top: 0;
  right: auto;
  left: calc(100% + 0.25em);
}
.file-embed-link {
  position: absolute;
  top: 0;
  right: 0;
}
/* #region       Image positioning and styling */

/* We'll sometimes have images inside columns, so we'd like them to fit into the available space. */
.markdown-source-view.mod-cm6 .cm-content > img,
.markdown-source-view.mod-cm6 .cm-content .image-embed img,
.markdown-source-view.mod-cm6 .cm-content > .cm-line .cm-html-embed img {
  max-width: 100%;
}
body.theme-setting-enableImageAdjustmentWithAltText {
  /* Center images */
  .markdown-source-view.mod-cm6 .cm-content > img[alt~=center],
  .markdown-source-view.mod-cm6 .cm-content .image-embed[alt~=center] img,
  .markdown-source-view.mod-cm6 .cm-content > .cm-line .cm-html-embed img[alt~=center] {
    display: block;
    margin: 0 auto !important;
  }
  .markdown-preview-view img[alt~=center] {
    display: block;
    margin: 0 auto;
  }
  /* Float images left/right */
  /* Unfortunately, floats make live preview mode confused about how to assign line numbers. Left/right floating only applies to reading view */
  .markdown-preview-view img[alt~=right] {
    margin: 0 0 1em 1em !important;
    float: right;
  }
  .markdown-preview-view img[alt~=left] {
    margin: 0 1em 1em 0 !important;
    float: left;
  }

  /* Round corners of images */
  .markdown-source-view.mod-cm6 .cm-content > img[alt~=round],
  .markdown-source-view.mod-cm6 .cm-content .image-embed[alt~=round] img,
  .markdown-source-view.mod-cm6 .cm-content > .cm-line .cm-html-embed img[alt~=round],
  .markdown-preview-view img[alt~=round],
  .markdown-preview-view .image-embed[alt~=round] img {
    border-radius: 0.5em;
  }
  .markdown-source-view.mod-cm6 .cm-content > img[alt~=circle],
  .markdown-source-view.mod-cm6 .cm-content .image-embed[alt~=circle] img,
  .markdown-source-view.mod-cm6 .cm-content > .cm-line .cm-html-embed img[alt~=circle],
  .markdown-preview-view img[alt~=circle],
  .markdown-preview-view .image-embed[alt~=circle] img {
    border-radius: var(--theme-length-fullBorderRadius);
  }
}
body.theme-setting-centerImages {
  .markdown-source-view.mod-cm6 .cm-content > img,
  .markdown-source-view.mod-cm6 .cm-content .image-embed img,
  .markdown-source-view.mod-cm6 .cm-content > .cm-line .cm-html-embed img {
    display: block;
    margin: 0 auto !important;
  }
  .markdown-preview-view img {
    display: block;
    margin: 0 auto;
  }
}
/* #endregion */
/* Audio embed */
/* Not technically an embed, but when we've opened an audio file directly in fiule navigation we ant to see the same controls. */
.video-container > audio {
  background-color: var(--embed-background);
  border-bottom: var(--embed-border-bottom);
  border-inline-start: var(--embed-border-left);
  border-radius: var(--radius-m);
  border-inline-end: var(--embed-border-right);
  border-top: var(--embed-border-top);
  margin: 0;
}
.markdown-source-view.mod-cm6 .cm-content > .media-embed:has(> audio) {
  display: flex;
}
audio::-webkit-media-controls-enclosure {
  border: none;
  background: transparent;
  padding: 0;
  border-radius: 0;
  max-height: none;
  line-height: 0;
}
audio::-webkit-media-controls-panel {
  background: transparent;
  border: none;
  padding: 0.25rem;
  border-radius: var(--radius-m);
}

/* Video embed */
/* Not technically an embed, but when we've opened an audio file directly in fiule navigation we ant to see the same controls. */
.cm-html-embed > video,
.markdown-reading-view video {
  background-color: var(--embed-background);
  border-bottom: var(--embed-border-bottom);
  border-inline-start: var(--embed-border-left);
  border-radius: var(--radius-m);
  border-inline-end: var(--embed-border-right);
  border-top: var(--embed-border-top);
  margin: 0;
}

/* Markdown embed e.g. embedded note */
.markdown-embed {
  padding: var(--embed-padding);
}
.markdown-embed .markdown-rendered .mod-header {
  margin-bottom: 0;
}

/* PDF embed */
.pdf-toolbar {
  background-color: transparent;
  border-bottom: none;
  padding: 0.25em 2.25em 0.25em 0.25em;
}
.pdf-container {
  background-color: var(--pdf-background);
  margin: 0 0.25em 0.25em 0.25em;
  border-bottom-left-radius: 0.3em;
  border-bottom-right-radius: 0.3em;
}
.markdown-source-view.mod-cm6 .pdf-embed .edit-block-button {
  background: transparent;
  top: 0.25em;
}

/* Query embed */
.internal-query .search-result-container {
  padding: 0 1em 1em 1em;
  max-height: 800px;
  overflow: auto;
  border: none;
  background-color: var(--background-secondary);
  background-color: transparent;
  border-radius: 0;
}
.internal-query .internal-query-header {
  padding: 0.5em 0 0.5em 1em;
  color: var(--text-normal);
  display: flex;
  justify-content: flex-start;
  align-items: center;
}
@media (hover: hover) {
  .markdown-source-view.mod-cm6
    .cm-embed-block:not(.cm-table-widget):has(> .internal-query):hover {
    box-shadow: none;
  }
}
/* ... */

